--- a/template.css
+++ b/template.css
@@ -16,6 +16,12 @@
     --p-font: 1rem;
 }
 
+html{
+    scroll-behavior: smooth;
+    scroll-padding-top: 6rem;
+    overflow-x: hidden;
+}
+
 body {
     background-color: #2F4F4F;
     color: var(--text-color);
@@ -28,7 +34,7 @@ header {
 }
 
 .nav {
-    max-width: 1280px;
+    max-width: 1680px;
     height: 70px;
     margin-inline: auto;
     display: flex;
@@ -65,6 +71,32 @@ header {
     padding-right: 25px;
 }
 
+.cart-button {
+    background-color: #1b4b4b;
+    color: #fff;
+    padding: 35px 35px;
+    border: none;
+    cursor: pointer;
+
+    background-image: url(assets/icons_carrinho.png);
+    background-size: 35px 35px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.user-button {
+    background-color: #1b4b4b;
+    color: #fff;
+    padding: 35px 35px;
+    border: none;
+    cursor: pointer;
+
+    background-image: url(assets/icons8-gato-64.png);
+    background-size: 35px 35px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 .hamburger {
     display: none;
     border: none;
@@ -88,6 +120,7 @@ header {
 }
 
 @media (max-width: 750px) {
+    
     .hamburger {
         display: block;
         z-index: 1;
