--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -114,6 +114,12 @@ body * {
         height: 130vh;
     }
 
+    .card-cadastro{
+        width: 50vw;
+        height: 65vw;
+        margin-top: 50px;
+    }
+
     .imagem-cadastro {
         display: flex;
         justify-content: center;
