--- a/template.css
+++ b/template.css
@@ -49,6 +49,54 @@ header {
     font-size: 20px;
 }
 
+ul {
+    display: flex;
+}
+
+.section-contatos li {
+    list-style: none;
+    margin: 0 15px;
+    cursor: pointer;
+}
+
+.section-contatos li {
+    position: relative;
+    display: block;
+    height: 100px;
+    width: 100px;
+    background: #1b4b4b;
+    line-height: 100px;
+    text-align: center;
+    color: var(--color-contatos);
+    font-size: 3em;
+    border-radius: 50%;
+    transition: 0.5s;
+}
+
+ul li::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: var(--color-contatos);
+    transform: scale(0.9);
+    z-index: -1;
+}
+
+ul li:hover::before {
+    transform: scale(1.1);
+    box-shadow: 0px 0px 20px var(--color-contatos);
+}
+
+ul li:hover {
+    color: #1b4b4b;
+    box-shadow: 0px 0px 8px var(--color-contatos);
+    text-shadow: 0px 0px 8px var(--color-contatos);
+}
+
 .logo img {
     height: 65px;
     width: 65px;
