--- a/template.css
+++ b/template.css
@@ -49,6 +49,33 @@ header {
     font-size: 20px;
 }
 
+.gallery {
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+img {
+    aspect-ratio: 9/16;
+    min-width: 0;
+    flex: 1 1 10px;
+    object-fit: cover;
+    opacity: .5;
+    transition: .5s;
+}
+
+img:hover {
+    flex: 1 1 100px;
+    opacity: 1;
+}
+
+.section-contatos {
+    height: 20vh;
+    width: 50%;
+    align-items: center;
+    margin-left: 80vh;
+}
+
 .section-contatos li {
     list-style: none;
     margin: 0 15px;
@@ -173,7 +200,98 @@ ul li:hover {
     transition: 0.3s;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 767px) {
+    
+    .section-contatos {
+        height: 20vh;
+        width: 50%;
+        align-items: center;
+        margin-left: 20vh;
+    }
+
+    .section-contatos li {
+        position: relative;
+        display: block;
+        height: 100px;
+        width: 100px;
+        background: #1b4b4b;
+        line-height: 100px;
+        text-align: center;
+        color: var(--color-contatos);
+        font-size: 3em;
+        border-radius: 50%;
+        transition: 0.5s;
+    }
+
+    .hamburger {
+        display: block;
+        z-index: 1;
+    }
+
+    .nav-list {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vw;
+        background: #1b4b4b;
+        clip-path: circle(100px at 90% -15%);
+        transition: 1s ease-out;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        gap: 0;
+        pointer-events: none;
+    }
+
+    .nav-list a {
+        font-size: 20px;
+        opacity: 0;
+    }
+
+    .nav-list li:nth-child(1) a {
+        transition: 0.5s 0.2s;
+    }
+
+    .nav-list li:nth-child(2) a {
+        transition: 0.5s 0.4s;
+    }
+
+    .nav-list li:nth-child(3) a {
+        transition: 0.5s 0.6s;
+    }
+
+    .nav-list li:nth-child(4) a {
+        transition: 0.5s 0.8s;
+    }
+
+    .nav.active .nav-list {
+        clip-path: circle(1500px at 90% -15%);
+        pointer-events: all;
+    }
+
+    .nav.active .nav-list a {
+        opacity: 1;
+    }
+
+    .nav.active .hamburger {
+        position: fixed;
+        top: 26px;
+        right: 16px;
+        border-top-color: transparent;
+    }
+
+    .nav.active .hamburger::before {
+        transform: rotate(135deg);
+    }
+
+    .nav.active .hamburger::after {
+        transform: rotate(-135deg);
+        top: -7px;
+    }
+}
+
+@media (max-width: 1023px) {
     
     .section-contatos {
         height: 20vh;
