--- a/template.css
+++ b/template.css
@@ -49,7 +49,7 @@ header {
     font-size: 20px;
 }
 
-.gallery {
+.section-gallery {
     display: flex;
     width: 100%;
     height: 100%;
@@ -200,7 +200,34 @@ ul li:hover {
     transition: 0.3s;
 }
 
+.hidden {
+    display: none;
+}
+
 @media (max-width: 767px) {
+
+    .section-gallery {
+        align-items: center;
+        width: 100%;
+        height: 50%;
+    }
+    
+    .section-gallery img {
+        aspect-ratio: 9/16;
+        width: 19%;
+        height: 10%;
+        min-width: 0;
+        flex: 1 1 10px;
+        object-fit: cover;
+        opacity: .5;
+        transition: .5s;
+    }
+    
+    img:hover {
+        flex: 1 1 100px;
+        opacity: 1;
+    }
+    
     
     .section-contatos {
         height: 20vh;
