--- a/template.css
+++ b/template.css
@@ -55,7 +55,7 @@ header {
     height: 100%;
 }
 
-img {
+.gallery {
     aspect-ratio: 9/16;
     min-width: 0;
     flex: 1 1 10px;
@@ -67,6 +67,85 @@ img {
 img:hover {
     flex: 1 1 100px;
     opacity: 1;
+}
+
+.destaques {
+    font-size: 3rem;
+    text-align: center;
+}
+
+.section-produtos section {
+    margin-inline: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.item1 {
+    margin-right: 60px;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.item2 {
+    margin-right: 60px;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.item3 {
+    margin-right: 60px;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.home-text h1 {
+    font-size: 20px;
+    line-height: 1.2;
+    margin-bottom: 2px;
+}
+
+.home-text h5 {
+    color: #ffffff99;
+    font-size: 12px;
+    font-weight: 400;
+    margin-bottom: 60px;
+}
+
+.home-text h3 {
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    margin-bottom: 5px;
+}
+
+.home-img img {
+    max-width: 100%;
+    width: 28rm;
+    height: auto;
+    margin-left: 25%;
+}
+
+.btn {
+    display: inline-block;
+    padding: 10px 40px;
+    font-size: 16px;
+    font-weight: 400;
+    background: transparent;
+    border: solid 2px var(--text-color);
+    transition: all.5s ease;
+    color: #fff;
+}
+
+.btn:hover {
+    background: var(--text-color);
+    border: 2px solid var(--text-color);
+    color: #000;
+}
+
+.contatos {
+    font-size: 3rem;
+    text-align: center;
 }
 
 .section-contatos {
@@ -227,6 +306,72 @@ ul li:hover {
         flex: 1 1 100px;
         opacity: 1;
     }
+
+    .section-produtos section {
+        margin-inline: auto;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
+    .item1 {
+        justify-content: center;
+        cursor: pointer;
+    }
+    
+    .item2 {
+        justify-content: center;
+        cursor: pointer;
+    }
+    
+    .item3 {
+        justify-content: center;
+        cursor: pointer;
+    }
+    
+    .home-text h1 {
+        font-size: 20px;
+        line-height: 1.2;
+        margin-bottom: 2px;
+    }
+    
+    .home-text h5 {
+        color: #ffffff99;
+        font-size: 12px;
+        font-weight: 400;
+        margin-bottom: 60px;
+    }
+    
+    .home-text h3 {
+        font-size: 20px;
+        font-weight: 700;
+        letter-spacing: 2px;
+        margin-bottom: 5px;
+    }
+    
+    .home-img img {
+        max-width: 100%;
+        width: 28rm;
+        height: auto;
+        margin-left: 25%;
+    }
+    
+    .btn {
+        display: inline-block;
+        padding: 10px 40px;
+        font-size: 16px;
+        font-weight: 400;
+        background: transparent;
+        border: solid 2px var(--text-color);
+        transition: all.5s ease;
+        color: #fff;
+    }
+    
+    .btn:hover {
+        background: var(--text-color);
+        border: 2px solid var(--text-color);
+        color: #000;
+    }
     
     
     .section-contatos {
@@ -234,8 +379,9 @@ ul li:hover {
         width: 50%;
         align-items: center;
         margin-left: 20vh;
+        margin-right: 10vh;
     }
-
+    
     .section-contatos li {
         position: relative;
         display: block;
