--- a/carrinho.css
+++ b/carrinho.css
@@ -16,6 +16,12 @@
     --p-font: 1rem;
 }
 
+html{
+    scroll-behavior: smooth;
+    scroll-padding-top: 6rem;
+    overflow-x: hidden;
+}
+
 body {
     background-color: #2F4F4F;
     color: var(--text-color);
@@ -28,7 +34,7 @@ header {
 }
 
 .nav {
-    max-width: 1280px;
+    max-width: 1680px;
     height: 70px;
     margin-inline: auto;
     display: flex;
@@ -43,42 +49,41 @@ header {
     font-size: 20px;
 }
 
-.logo img {
-    height: 65px;
-    width: 65px;
+.section-gallery {
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+.gallery {
+    aspect-ratio: 9/16;
+    min-width: 0;
+    flex: 1 1 10px;
+    object-fit: cover;
+    opacity: .5;
+    transition: .5s;
+}
+
+img:hover {
+    flex: 1 1 100px;
+    opacity: 1;
+}
+
+.carrinho {
+    font-size: 3rem;
+    text-align: center;
+}
+
+.section-carrinho section {
+    margin-inline: auto;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 
-ul {
-    display: flex;
-}
-
-.cart-button {
-    background-color: #1b4b4b;
-    color: #fff;
-    padding: 35px 35px;
-    border: none;
-    cursor: pointer;
-
-    background-image: url(assets/icons_carrinho.png);
-    background-size: 35px 35px;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.user-button {
-    background-color: #1b4b4b;
-    color: #fff;
-    padding: 35px 35px;
-    border: none;
-    cursor: pointer;
-
-    background-image: url(assets/icons8-gato-64.png);
-    background-size: 35px 35px;
-    background-repeat: no-repeat;
-    background-position: center;
+.contatos {
+    font-size: 3rem;
+    text-align: center;
 }
 
 .section-contatos {
@@ -86,6 +91,16 @@ ul {
     width: 50%;
     align-items: center;
     margin-left: 80vh;
+}
+
+.section-contatos li {
+    list-style: none;
+    margin: 0 15px;
+    cursor: pointer;
+}
+
+ul {
+    display: flex;
 }
 
 .section-contatos li {
@@ -132,6 +147,14 @@ ul li:hover {
     text-shadow: 0px 0px 8px var(--color-contatos);
 }
 
+.logo img {
+    height: 65px;
+    width: 65px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .nav-list {
     display: flex;
     gap: 32px;
@@ -146,16 +169,44 @@ ul li:hover {
     padding-right: 25px;
 }
 
+.cart-button {
+    background-color: #1b4b4b;
+    color: #fff;
+    padding: 35px 35px;
+    border: none;
+    cursor: pointer;
+
+    background-image: url(assets/icons_carrinho.png);
+    background-size: 35px 35px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.user-button {
+    background-color: #1b4b4b;
+    color: #fff;
+    padding: 35px 35px;
+    border: none;
+    cursor: pointer;
+
+    background-image: url(assets/icons8-gato-64.png);
+    background-size: 35px 35px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 .hamburger {
     display: none;
     border: none;
     background: none;
     border-top: 3px solid var(--text-color);
     cursor: pointer;
+    background: #1b4b4b;
 }
 
 .hamburger::before,
 .hamburger::after {
+    background: #1b4b4b;
     content: " ";
     display: block;
     width: 30px;
@@ -166,136 +217,49 @@ ul li:hover {
     transition: 0.3s;
 }
 
-.home {
-    position: relative;
-    height: 100vh;
-    width: 85%;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    align-items: center;
-    gap: 2rem;
-}
-
-.home-text h1 {
-    font-size: 40px;
-    line-height: 1.2;
-    margin-bottom: 2px;
-}
-
-.home-text h5 {
-    color: #ffffff99;
-    font-size: 14px;
-    font-weight: 400;
-    margin-bottom: 60px;
-}
-
-.home-text h3 {
-    font-size: 40px;
-    font-weight: 700;
-    letter-spacing: 2px;
-    margin-bottom: 5px;
-}
-
-.home-img img {
-    max-width: 100%;
-    width: 28rm;
-    height: auto;
-    margin-left: 25%;
-}
-
-.btn {
-    display: inline-block;
-    padding: 15px 70px;
-    font-size: 16px;
-    font-weight: 500;
-    background: transparent;
-    border: solid 2px var(--text-color);
-    transition: all.5s ease;
-    color: #fff;
-}
-
-.btn:hover {
-    background: var(--text-color);
-    border: 2px solid var(--text-color);
-    color: #000;
-}
-
-.main {
-    position: absolute;
-    top: 50%;
-    left: 3%;
-    transform: translateY(-50%);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-}
-
-.main li img {
-    width: 75px;
-    height: auto;
-    max-width: 100%;
-}
-
-.row1 {
-    background: #489b7f;
-    height: 70px;
-    width: 70px;
-    border-radius: 50%;
-    justify-content: center;
-    transition: all.55s ease;
-    cursor: pointer;
-    display: inline-flex;
-}
-
-.row1:hover {
-    transform: translateY(-8px);
-}
-
-.row2 {
-    background: #348d52;
-    height: 70px;
-    width: 70px;
-    border-radius: 50%;
-    justify-content: center;
-    transition: all.55s ease;
-    cursor: pointer;
-    display: inline-flex;
-}
-
-.row2:hover {
-    transform: translateY(-8px);
-}
-
-.row3 {
-    background: #336d21;
-    height: 70px;
-    width: 70px;
-    border-radius: 50%;
-    justify-content: center;
-    transition: all.55s ease;
-    cursor: pointer;
-    display: inline-flex;
-}
-
-.row3:hover {
-    transform: translateY(-8px);
-}
-
 .hidden {
     display: none;
 }
 
 @media (max-width: 767px) {
 
+    .section-gallery {
+        align-items: center;
+        width: 100%;
+        height: 50%;
+    }
+    
+    .section-gallery img {
+        aspect-ratio: 9/16;
+        width: 19%;
+        height: 10%;
+        min-width: 0;
+        flex: 1 1 10px;
+        object-fit: cover;
+        opacity: .5;
+        transition: .5s;
+    }
+    
+    img:hover {
+        flex: 1 1 100px;
+        opacity: 1;
+    }
+    
+    .btn:hover {
+        background: var(--text-color);
+        border: 2px solid var(--text-color);
+        color: #000;
+    }
+    
+    
     .section-contatos {
         height: 20vh;
         width: 50%;
         align-items: center;
         margin-left: 20vh;
+        margin-right: 10vh;
     }
-
+    
     .section-contatos li {
         position: relative;
         display: block;
@@ -376,60 +340,81 @@ ul li:hover {
         transform: rotate(-135deg);
         top: -7px;
     }
+}
 
-    .home-text h1 {
-        font-size: 30px;
-        line-height: 1.2;
-        margin-bottom: 2px;
-    }
-
-    .home-text h5 {
-        color: #ffffff99;
-        font-size: 14px;
-        font-weight: 400;
-        margin-bottom: 60px;
-    }
-
-    .home-text h3 {
-        font-size: 40px;
-        font-weight: 700;
-        letter-spacing: 2px;
-        margin-bottom: 5px;
-    }
-
-    .home-img img {
-        max-width: 100%;
-        width: 100vw;
-        height: 60vw;
-        margin-left: 25%;
-    }
-
-    .btn {
-        display: inline-block;
-        padding: 15px 50px;
-        font-size: 16px;
-        font-weight: 500;
-        background: transparent;
-        border: solid 2px var(--text-color);
-        transition: all.5s ease;
-        color: #fff;
-    }
-
-    .btn:hover {
-        background: var(--text-color);
-        border: 2px solid var(--text-color);
-        color: #000;
-    }
-
-    .main {
-        position: absolute;
-        top: 60%;
-        left: 5%;
-        transform: translateY(-50%);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+@media (max-width: 1023px) {
+    
+    .section-contatos {
+        height: 20vh;
+        width: 50%;
         align-items: center;
-        gap: 2rem;
+        margin-left: 20vh;
+    }
+
+    .hamburger {
+        display: block;
+        z-index: 1;
+    }
+
+    .nav-list {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vw;
+        background: #1b4b4b;
+        clip-path: circle(100px at 90% -15%);
+        transition: 1s ease-out;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        gap: 0;
+        pointer-events: none;
+    }
+
+    .nav-list a {
+        font-size: 20px;
+        opacity: 0;
+    }
+
+    .nav-list li:nth-child(1) a {
+        transition: 0.5s 0.2s;
+    }
+
+    .nav-list li:nth-child(2) a {
+        transition: 0.5s 0.4s;
+    }
+
+    .nav-list li:nth-child(3) a {
+        transition: 0.5s 0.6s;
+    }
+
+    .nav-list li:nth-child(4) a {
+        transition: 0.5s 0.8s;
+    }
+
+    .nav.active .nav-list {
+        clip-path: circle(1500px at 90% -15%);
+        pointer-events: all;
+    }
+
+    .nav.active .nav-list a {
+        opacity: 1;
+    }
+
+    .nav.active .hamburger {
+        position: fixed;
+        top: 26px;
+        right: 16px;
+        border-top-color: transparent;
+    }
+
+    .nav.active .hamburger::before {
+        transform: rotate(135deg);
+    }
+
+    .nav.active .hamburger::after {
+        transform: rotate(-135deg);
+        top: -7px;
     }
 }
