--- a/carrinho.css
+++ b/carrinho.css
@@ -49,36 +49,65 @@ header {
     font-size: 20px;
 }
 
-.section-gallery {
-    display: flex;
-    width: 100%;
-    height: 100%;
-}
-
-.gallery {
-    aspect-ratio: 9/16;
-    min-width: 0;
-    flex: 1 1 10px;
-    object-fit: cover;
-    opacity: .5;
-    transition: .5s;
-}
-
-img:hover {
-    flex: 1 1 100px;
-    opacity: 1;
-}
-
-.carrinho {
+.seucarrinho {
     font-size: 3rem;
     text-align: center;
 }
 
-.section-carrinho section {
-    margin-inline: auto;
-    display: flex;
-    align-items: center;
+.carrinho {
+    max-width: 800px;
+    margin: 20px auto;
+    background-color: transparent;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+  }
+
+  td {
+    border: 1px solid;
+    padding: 8px;
+    text-align: left;
+  }
+
+  th {
+    background-color: transparent;
+  }
+
+  .checkout-btn {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    background-color: #4caf50;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+.item1 {
+    margin-right: 60px;
     justify-content: center;
+    cursor: pointer;
+}
+
+.item2 {
+    margin-right: 60px;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.item3 {
+    margin-right: 60px;
+    justify-content: center;
+    cursor: pointer;
 }
 
 .contatos {
