--- a/css/golden.css
+++ b/css/golden.css
@@ -81,6 +81,28 @@ ul {
     background-position: center;
 }
 
+.tabela p {
+    font-size: 40px;
+    margin-left: 90vh;
+}
+
+table {
+    width: 70%;
+    border-collapse: collapse;
+    margin-left: 60vh;
+    margin-bottom: 20px;
+}
+
+th, td {
+    border: 1px solid #fff;
+    padding: 8px;
+    text-align: left;
+}
+
+th {
+    background-color: transparent;
+}
+
 .section-contatos {
     height: 20vh;
     width: 50%;
