--- a/carrinho.css
+++ b/carrinho.css
@@ -63,6 +63,10 @@ header {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
 
+.carrinho p {
+    font-size: 1.5rem;
+}
+
   table {
     width: 100%;
     border-collapse: collapse;
