--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -15,25 +15,40 @@ body * {
     background: #2F4F4F;
     display: flex;
     justify-content: center;
-    align-items: top;
+    align-items: center;
     flex-direction: row;
 }
 
-.right-cadastro {
-    width: 45vw;
-    height: 80vh;
+.imagem {
+    width: 40vw;
+    height: 50vh;
     display: flex;
-    align-items: top;
-    margin-top: 20px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.left-cadastro-imagem {
+    width: 45vw;
+}
+
+.right-cadastro {
+    width: 35vw;
+    height: 60vh;
+    display: flex;
+    align-items: center;
 }
 
 .cadastro {
     width: 50vw;
     display: flex;
     justify-content: center;
-    flex-direction: column;
     align-items: center;
-    margin-right: 100px;
+    flex-direction: column;
+    padding: 30px 35px;
+    background: #233b3b;
+    border-radius: 20px;
+    box-shadow: 0px 10px 40px #141f1f;
 }
 
 .card-cadastro {
