--- a/template.css
+++ b/template.css
@@ -34,33 +34,38 @@ header {
 }
 
 .nav {
-    max-width: 1680px;
+    max-width: 100vw;
     height: 70px;
     margin-inline: auto;
     display: flex;
     align-items: center;
+    padding: 10px;
     justify-content: space-between;
 }
 
 .logo {
     display: flex;
-    align-items: center;
-    color: var(--text-color);
     font-size: 20px;
+}
+
+.logo a {
+    color: white;
 }
 
 .section-gallery {
     display: flex;
-    width: 100%;
-    height: 100%;
+    flex-wrap: wrap;
 }
 
-.gallery {
-    aspect-ratio: 9/16;
-    min-width: 0;
+.section-gallery img {
+    width: 35vw;
+    height: auto;
+    box-sizing: border-box;
+    margin: 1px;
+    aspect-ratio: 15/16;
     flex: 1 1 10px;
     object-fit: cover;
-    opacity: .5;
+    opacity: .35;
     transition: .5s;
 }
 
@@ -290,7 +295,7 @@ ul li:hover {
         width: 100%;
         height: 50%;
     }
-    
+
     .section-gallery img {
         aspect-ratio: 9/16;
         width: 19%;
@@ -301,7 +306,7 @@ ul li:hover {
         opacity: .5;
         transition: .5s;
     }
-    
+
     img:hover {
         flex: 1 1 100px;
         opacity: 1;
@@ -313,49 +318,49 @@ ul li:hover {
         align-items: center;
         justify-content: space-between;
     }
-    
+
     .item1 {
         justify-content: center;
         cursor: pointer;
     }
-    
+
     .item2 {
         justify-content: center;
         cursor: pointer;
     }
-    
+
     .item3 {
         justify-content: center;
         cursor: pointer;
     }
-    
+
     .home-text h1 {
         font-size: 20px;
         line-height: 1.2;
         margin-bottom: 2px;
     }
-    
+
     .home-text h5 {
         color: #ffffff99;
         font-size: 12px;
         font-weight: 400;
         margin-bottom: 60px;
     }
-    
+
     .home-text h3 {
         font-size: 20px;
         font-weight: 700;
         letter-spacing: 2px;
         margin-bottom: 5px;
     }
-    
+
     .home-img img {
         max-width: 100%;
         width: 28rm;
         height: auto;
         margin-left: 25%;
     }
-    
+
     .btn {
         display: inline-block;
         padding: 10px 40px;
@@ -366,14 +371,14 @@ ul li:hover {
         transition: all.5s ease;
         color: #fff;
     }
-    
+
     .btn:hover {
         background: var(--text-color);
         border: 2px solid var(--text-color);
         color: #000;
     }
-    
-    
+
+
     .section-contatos {
         height: 20vh;
         width: 50%;
@@ -381,7 +386,7 @@ ul li:hover {
         margin-left: 20vh;
         margin-right: 10vh;
     }
-    
+
     .section-contatos li {
         position: relative;
         display: block;
@@ -465,7 +470,7 @@ ul li:hover {
 }
 
 @media (max-width: 1023px) {
-    
+
     .section-contatos {
         height: 20vh;
         width: 50%;
