--- a/carrinho.css
+++ b/carrinho.css
@@ -73,6 +73,11 @@ header {
     margin-bottom: 20px;
   }
 
+  img {
+    width: 10vw;
+    height: 10vw;
+  }
+
   td {
     border: 1px solid;
     padding: 8px;
@@ -195,11 +200,27 @@ ul li:hover {
 }
 
 .nav-list a {
+    position: relative;
     font-size: 18px;
-    color: var(--text-color);
-    padding-block: 16px;
-    padding-left: 25px;
-    padding-right: 25px;
+    color: #fff;
+    font-weight: 500;
+    text-decoration: none;
+    margin-left: 40px;
+}
+
+.nav-list a::before {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background: #fff;
+    transition: .3s;
+}
+
+.nav-list a:hover::before {
+    width: 100%;
 }
 
 .cart-button {
